kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: books
  labels:
    projeto: lib
