kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  type: ClusterIP
  selector:
    app: calibre-web
  ports:
    - port: 8083
      targetPort: 8083
